feat: add command for Insurance
