# src/main/java/com/tinubu/insuranceApi/domain/InsuranceQueryPort.java
@@ -1,13 +1,0 @@
-package com.tinubu.insuranceApi.domain;
-
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-
-public interface InsuranceQueryPort {
-
-    Optional<Insurance> get(UUID uuid);
-
-    List<Insurance> getAll();
-
-}
