# src/main/java/com/tinubu/insuranceApi/domain/exception/InsuranceNotFoundException.java
@@ -1,0 +1,10 @@
+package com.tinubu.insuranceApi.domain.exception;
+
+import java.util.UUID;
+
+public class InsuranceNotFoundException extends RuntimeException {
+
+    public InsuranceNotFoundException(UUID insuranceId) {
+        super("Could not found Insurance with ID %s".formatted(insuranceId));
+    }
+}
