# src/main/java/com/tinubu/insuranceApi/domain/usecases/QueryInsuranceImpl.java
@@ -1,7 +1,9 @@
 package com.tinubu.insuranceApi.domain.usecases;
 
-import com.tinubu.insuranceApi.domain.Insurance;
-import com.tinubu.insuranceApi.domain.InsuranceQueryPort;
+import com.tinubu.insuranceApi.domain.InsurancePersistencePort;
+import com.tinubu.insuranceApi.domain.QueryInsurance;
+import com.tinubu.insuranceApi.domain.exception.InsuranceNotFoundException;
+import com.tinubu.insuranceApi.domain.models.Insurance;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
@@ -14,17 +16,17 @@ import java.util.UUID;
 @Slf4j
 public class QueryInsuranceImpl implements QueryInsurance {
 
-    private final InsuranceQueryPort insuranceQueryPort;
+    private final InsurancePersistencePort insurancePersistencePort;
 
     public Insurance with(UUID uuid) {
         log.info("Getting insurance with ID {}", uuid);
-        return insuranceQueryPort.get(uuid)
-                .orElseThrow();
+        return insurancePersistencePort.get(uuid)
+                .orElseThrow(() -> new InsuranceNotFoundException(uuid));
     }
 
     public List<Insurance> all() {
         log.info("Getting all insurances");
-        return insuranceQueryPort.getAll();
+        return insurancePersistencePort.getAll();
     }
 
 }
